--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,11 @@
     file: armv7.yml
   when: ansible_architecture == 'armv7l'
 
+- name: Install Docker SDK for Python
+  pip:
+    name: "docker=={{ docker_python_version }}"
+    state: present
+
 - name: Add Docker GPG key
   apt_key:
     url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
