--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 - name: Reload Docker service
-  systemd:
+  ansible.builtin.systemd:
     name: docker
     state: reloaded
     daemon_reload: true
