--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,6 +56,7 @@
     name: docker_system_prune
     minute: "30"
     hour: "3"
+    weekday: "6"
     user: root
     job: "docker system prune --volumes --force"
   when: docker_system_prune_cron
