--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Felix Boerner
-  description: Manage Docker CE service
+  description: Manage Docker CE on Raspberry Pi OS
   license: MIT
   min_ansible_version: 2.9
   github_branch: master
