--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
-docker_version: 5:19.03.11~3
+docker_version: 5:20.10.2~3-0~debian-buster
 docker_package_arch: amd64
 docker_python_version: 4.2.2
 docker_system_prune_cron: true
