--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,18 +33,18 @@
     update_cache: true
   vars:
     packages:
-      - "docker-ce={{ docker_version }}-0~{{ ansible_distribution | lower }}-{{ ansible_distribution_release }}"
-      - "docker-ce-cli={{ docker_version }}-0~{{ ansible_distribution | lower }}-{{ ansible_distribution_release }}"
+      - "docker-ce={{ docker_version }}"
+      - "docker-ce-cli={{ docker_version }}"
 
 - name: Add version pinning for Docker packages
   ansible.builtin.copy:
     content: |
             Package: docker-ce
-            Pin: version {{ docker_version }}-0~{{ ansible_distribution | lower }}-{{ ansible_distribution_release }}
+            Pin: version {{ docker_version }}
             Pin-Priority: 1000
 
             Package: docker-ce-cli
-            Pin: version {{ docker_version }}-0~{{ ansible_distribution | lower }}-{{ ansible_distribution_release }}
+            Pin: version {{ docker_version }}
             Pin-Priority: 1000
     dest: /etc/apt/preferences.d/docker
     owner: root
