--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,7 @@
     packages:
       - "docker-ce={{ docker_version }}"
       - "docker-ce-cli={{ docker_version }}"
+      - "containerd.io={{ docker_containerd_version }}"
 
 - name: Add version pinning for Docker packages
   ansible.builtin.copy:
@@ -45,6 +46,10 @@
 
             Package: docker-ce-cli
             Pin: version {{ docker_version }}
+            Pin-Priority: 1000
+
+            Package: containerd.io
+            Pin: version {{ docker_containerd_version }}
             Pin-Priority: 1000
     dest: /etc/apt/preferences.d/docker
     owner: root
