--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,6 @@ docker_python_version: 4.2.2
 docker_system_prune_cron: true
 docker_daemon_json:
   live-restore: true
-  log-driver: json-file
+  log-driver: local
   log-opts:
     max-size: 100m
-    max-file: 7
