feat: add collections

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,6 +2,7 @@ dependency:
   name: galaxy
   options:
     role-file: requirements.yml
+    requirements-file: collections.yml
 
 driver:
   name: docker
