--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,4 @@ docker_python_version: 4.4.1
 docker_system_prune_cron: true
 docker_daemon_json:
   live-restore: true
-  log-driver: local
-  log-opts:
-    max-size: 100m
+  log-driver: journald
