--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
-- name: Reload Docker service
+- name: Restart Docker service
   ansible.builtin.systemd:
     name: docker
-    state: reloaded
+    state: restarted
     daemon_reload: true
