--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,10 @@ jobs:
 
       - name: Install test dependencies
         run: |
-           python -m pip install --upgrade pip
-           python -m pip install molecule[docker,lint,test]
+          python -m pip install --upgrade pip
+          python -m pip install editorconfig-checker
+          sudo ln --symbolic "$(which editorconfig-checker)" /usr/local/bin/ec
+          python -m pip install molecule[docker,lint,test]
 
       - name: Run Molecule tests
         run: |
