--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: raspberry_docker
   author: Felix Boerner
   description: Manage Docker CE on Raspberry Pi OS
   license: MIT
