--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
   role_name: raspberry_docker
+  namespace: escalate
   author: Felix Boerner
   description: Manage Docker CE on Raspberry Pi OS
   license: MIT
