--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,8 +11,8 @@ lint: |
   set -e
   ec
   yamllint --strict -c .yamllint .
-  ansible-lint -x 106,701 .
-  flake8 --ignore=E501
+  ansible-lint .
+  flake8
 
 platforms:
   - name: instance
