--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  role_name: raspberry_docker
+  role_name: docker
   namespace: escalate
   author: Felix Boerner
   description: Manage Docker CE on Raspberry Pi OS
