--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -76,3 +76,11 @@
     group: root
     mode: 0644
   notify: Restart docker service
+
+- name: Force all notified handlers to run at this point
+  meta: flush_handlers
+
+- name: Create networks
+  community.docker.docker_network:
+    name: "{{ item }}"
+  loop: "{{ docker_networks }}"
