--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,8 @@
     name: "docker=={{ docker_python_version }}"
     state: present
     executable: pip3
+  environment:
+    PIP_BREAK_SYSTEM_PACKAGES: "1"
 
 - name: Add GPG key fo apt repository
   ansible.builtin.apt_key:
