feat: add max-file default value

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,6 +6,7 @@
       log-driver: local
       log-opts:
         max-size: 100m
+        max-file: "7"
     docker_networks:
       - name: internal
         subnet: 172.25.0.0/16
