--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,7 @@ docker_daemon_json:
   log-driver: local
   log-opts:
     max-size: 100m
+    max-file: "7"
 
 # https://docs.docker.com/engine/reference/commandline/network_create/
 docker_networks: []
