--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 # https://download.docker.com/linux/debian/dists/bullseye/pool/stable/arm64/
-docker_version: 5:20.10.14~3-0~debian-{{ ansible_distribution_release }}
-docker_containerd_version: 1.5.11-1
+# https://download.docker.com/linux/debian/dists/bookworm/pool/stable/arm64/
+docker_version: 25.0.3-1
+docker_containerd_version: 1.6.28-1
 # https://pypi.org/project/docker/
 docker_python_version: 5.0.3
 
