--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,6 +1,7 @@
 - name: Converge
   hosts: all
   vars:
+    docker_system_prune_cron: true
     docker_daemon_json:
       live-restore: true
       log-driver: local
