--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,14 +37,24 @@
     group: root
     mode: 0644
 
-- name: Add system prune cron job
+- name: Create Docker system prune script
+  ansible.builtin.copy:
+    src: docker-system-prune.sh
+    dest: /usr/local/bin/docker-system-prune.sh
+    owner: root
+    group: root
+    mode: 0755
+  when: docker_system_prune_cron
+
+- name: Add Docker system prune cron job
   ansible.builtin.cron:
     name: docker_system_prune
+    state: present
     minute: "30"
     hour: "3"
     weekday: "6"
     user: root
-    job: "docker system prune --all --volumes --force"
+    job: /usr/local/bin/docker-system-prune.sh
   when: docker_system_prune_cron
 
 - name: Start and enable service
