--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,7 @@
 roles:
-  - name: common
-    src: escalate.common
-
-  - name: cron
-    src: escalate.cron
+  - name: escalate.common
+  - name: escalate.cron
 
 collections:
   - name: community.docker
-
   - name: community.general
